--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Nathan Riffaud</title>
 	<meta name="description" content="Welcome to the profile of Nathan Riffaud">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="STYLE.CSS">µ
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap" rel="stylesheet">
